@@ -1,3 +1,12 @@
+2003-05-17  Per Bothner  <per@bothner.com>
+
+	* Invoke.java (inlineClassName):  Take InlineCalls parameter instead
+	of Interpreter.  Get latter from former.
+	If type is a Classtype and isExisting, emit error is not found.
+	* InstanceOf.java (inline):  Upadte call to inlineClassName.
+	* SlotGet.java (inline):  Likewise.
+	* SlotSet.java (inline):  Likewise.
+
 2003-05-16  Per Bothner  <per@bothner.com>
 
 	* ClassMethods.java (checkName):  Take new 'reversible' parameter.
