@@ -1,3 +1,7 @@
+2003-05-17  Per Bothner  <per@bothner.com>
+
+	* Convert.java (inline):  Update call to inlineClassName.
+
 2003-04-19  Per Bothner  <per@bothner.com>
 
 	* NumberCompare.java (compile):  Fix logic for swapping arguments.
